[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent101-backend"
version = "0.1.0"
description = "Backend API for Agent101 - Multi-chain Liquidity Aggregator with AI Agents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Agent101 Team"}
]
keywords = ["api", "backend", "fastapi", "ai-agents", "blockchain", "defi", "liquidity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

dependencies = [
    # A2A Protocol (Agent-to-Agent Communication)
    "a2a-sdk>=0.3.10",
    "a2a-server>=0.6.1",
    
    # Google ADK (Agent Development Kit)
    "google-adk>=1.17.0",
    
    # LangGraph & LangChain (for agent orchestration)
    "langgraph>=0.3.18",
    "langchain-google-genai>=2.0.10",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.3.0",
    "duckduckgo-search>=6.0.0",
    
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Environment & Configuration
    "python-dotenv>=1.0.0",
    
    # Blockchain - Hedera/Hiero
    "hiero-sdk-python>=0.1.7,<0.2.0",
    
    # Blockchain - EVM (Ethereum, Polygon, etc.)
    "web3>=6.15.0",
    
    # HTTP Client (>=2.32.3 to support hiero-sdk-python which requires 2.32.3)
    "requests>=2.32.3",
    
    # Data Science & ML
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # AG-UI Protocol Adapter (Frontend Integration)
    "ag-ui-adk>=0.0.1",
    
    # Token Discovery & Price Data
    "coingecko>=0.13.0",
    
    # x402 Hedera Payment Protocol (local package)
    "x402-hedera-python @ file:///Users/niraj/Desktop/agent101-new/x402-hedera-python",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    
    # HTTP Testing
    "httpx>=0.26.0",
    
    # Code Formatting & Linting
    "black>=24.1.0",
    "ruff>=0.1.0",
    
    # Type Checking
    "mypy>=1.8.0",
    
    # Development Tools
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]

# UV dependency overrides to resolve conflicts
# hiero-sdk-python requires requests==2.32.3, but google-adk requires requests>=2.32.4
# We override to use requests==2.32.3 which should work with both (google-adk's constraint is likely conservative)
[tool.uv]
override-dependencies = [
    "requests==2.32.3",
]

[tool.setuptools]
packages = ["packages", "agents"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by black
    "E402",   # module level import not at top of file
    "E722",   # do not use bare except
    "F401",   # unused imports (handled by ruff itself in __init__.py)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"agents/multichain_liquidity/__main__.py" = ["E402"]
"agents/balance/__main__.py" = ["E402"]
"agents/sentiment/__main__.py" = ["E402"]
"agents/trading/__main__.py" = ["E402"]
"packages/blockchain/hedera/balance/balance_client.py" = ["E722"]

[tool.ruff.lint.isort]
known-first-party = ["packages", "agents"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "hiero.*",
    "web3.*",
    "coingecko.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages", "agents"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=packages",
    "--cov=agents",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["packages", "agents"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"
